==> spectraphilic/wasp_sketches/sketches/test_scripts/test_sdi12/SDI12.cpp <==
 #include <WaspClasses.h>
 #include "SDI12.h"

 void WaspSDI12::wakeSensors()
 {
	 setState(TRANSMITTING);
	 //Send the BREAK
	 digitalWrite(_dataPin, HIGH);
	 delayMicroseconds(12500);
	 
	 //Send the MARKING
	 digitalWrite(_dataPin, LOW);
	 delayMicroseconds(9000);
 }

 void WaspSDI12::writeChar(uint8_t out)
 {
	 // parity bit
	 out |= (parity_even_bit(out)<<7);
	 
	 digitalWrite(_dataPin, HIGH);
	 delayMicroseconds(SPACING);
	 
	 for (byte mask = 0x01; mask; mask<<=1)
	 {
		 // send payload
		 if(out & mask)
		 {
			 digitalWrite(_dataPin, LOW);
		 }
		 else
		 {
			 digitalWrite(_dataPin, HIGH);
		 }
		 delayMicroseconds(SPACING);
	 }
	 
	 // Stop bit
	 digitalWrite(_dataPin, LOW);
	 delayMicroseconds(SPACING);
 }

 void WaspSDI12::receiveChar()
 {
	 // Start bit?
	 if (digitalRead(_dataPin))
	 {
		 // buffer for new char
		 uint8_t newChar = 0;
		 
		 delayMicroseconds(SPACING/2);
		 
		 // read 7 data bits
		 for (uint8_t i=0x1; i<0x80; i <<= 1)
		 {
			 delayMicroseconds(SPACING);
			 uint8_t noti = ~i;
			 if (!digitalRead(_dataPin))
			 {
				 newChar |= i;
			 }
			 else
			 {
				 newChar &= noti;
			 }
		 }
		 
		 // skip parity adn stop bit
		 delayMicroseconds(SPACING);
		 delayMicroseconds(SPACING);
		 
		 // Overflow? If not, proceed.
		 if ((_rxBufferTail + 1) % _BUFFER_SIZE == _rxBufferHead)
		 {
			 _bufferOverflow = true;
		 }
		 else
		 {
			 // Save char, advance tail.
			 _rxBuffer[_rxBufferTail] = newChar;
			 _rxBufferTail = (_rxBufferTail + 1) % _BUFFER_SIZE;
			 j++;
		 }
	 }
 }

 void WaspSDI12::setState(uint8_t status)
 {
	 switch (status)
	 {
		 case HOLDING:				pinMode(_dataPin,OUTPUT);
		 							digitalWrite(_dataPin,LOW);
		 							break;
		 
		 case TRANSMITTING: 		pinMode(_dataPin,OUTPUT);
		 							break;
		 
		 case LISTENING:			digitalWrite(_dataPin,LOW);
		 							pinMode(_dataPin,INPUT);
		 							break;
		 
		 case DISABLED: 			digitalWrite(_dataPin,LOW);
		 							pinMode(_dataPin,INPUT);
		 							break;
		 
		 default: 					break;
	 }
 }
